[6.6.2.0_RC] Upgraded Tomcat to version 6.0.37 (merged from jahia_pack/branches/JAHIA-6-6-X-X-BRANCH revision 724)
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@725 39555585-ee67-472c-bf1e-947fb1f6b7c6